changed treasure logic